# spider_food

./: Cargo.toml  Restaurant.txt  readme.md
src/: main.rs
src/company/: go_foodie.rs  iding.rs  mod.rs
src/models/go_foodie/: mod.rs  product.rs  restaurant.rs
src/models/iding/: iding_api.rs  info_api.rs  menu_api.rs  mod.rs  product.rs  restaurant.rs
src/utils/: args.rs  deserialize.rs  mod.rs
